apps/proxmox/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
subsets:
  - addresses:
      - ip: 192.168.0.200
    ports:
      - port: 8006
        protocol: TCP
