apps/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
  type: ClusterIP
