apps/proxmox/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.home.bstjohn.net`)
      kind: Rule
      services:
        - name: proxmox
          port: 8006
          scheme: https
          serversTransport: proxmox-transport
  tls:
    secretName: wildcard-home-tls
